Fix Vercel build issues

--- a/content/help/frequently-asked-questions.mdx
+++ b/content/help/frequently-asked-questions.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'FAQ's - General Topics'
-updatedAt: '2024-01-19'
-summary: 'In the ever-evolving digital landscape, content remains the cornerstone of any successful strategy. As we step into a new decade, the definition and execution of content have become more critical than ever.'
+title: "FAQ's - General Topics"
+updatedAt: "2024-01-19"
+summary: "In the ever-evolving digital landscape, content remains the cornerstone of any successful strategy. As we step into a new decade, the definition and execution of content have become more critical than ever."
 ---
 
 - ## How can I use Open PRO without registration?
